...
            "state" : "translated",
            "value" : "Очистить плейлист?"
          }
        }
      }
    },
    "Clementine" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clementine"
          }
...
            "state" : "translated",
            "value" : "Протокол удалённого управления Clementine"
          }
        }
      }
    },
    "Close player" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zavřít přehrávač"
          }
...
            "state" : "translated",
            "value" : "Tasodifiy tartibni o'chirish"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fet"
          }
...
            "state" : "translated",
            "value" : "Внутри папки артиста, сохранять каждую песню в папку с названием её альбома."
          }
        }
      }
    },
    "Internet" : {
      "localizations" : {
        "et" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Internet"
          }
...
            "state" : "translated",
            "value" : "Играть сейчас"
          }
        }
      }
    },
    "Play on" : {
      "localizations" : {
        "fi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Toisto päällä"
          }
...
            "state" : "translated",
            "value" : "Сохранять каждую песню в папку с именем её артиста."
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerca"
          }
...
            "state" : "translated",
            "value" : "Настроить в Clementine"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuració"
          }
...
