...

/// The supported message types
public nonisolated enum Pb_Remote_MsgType: Int, SwiftProtobuf.Enum, Swift.CaseIterable {
  case unknown = 0

  /// Messages generally send from client to server
  case connect = 1
  case requestPlaylists = 3
  case requestPlaylistSongs = 4
  case changeSong = 5
  case setVolume = 6
  case setTrackPosition = 7
  case insertUrls = 8
...

  /// access Files from remote control
  case requestFiles = 200
  case appendFiles = 201

  /// Messages send by both
  case disconnect = 2
  case play = 20
  case playpause = 21
  case pause = 22
  case stop = 23
  case next = 24
  case previous = 25
...
  case renderPause = 323
  case renderStop = 324
  case renderSeek = 325
  case renderSetVolume = 326

  /// Server -> all clients
  case outputs = 340

  /// Browsing the Internet sidebar.
  /// Client -> server
  case requestBrowse = 360
  case requestBrowseAdd = 361

...
